--- a/apps/web/src/theme/components/PasswordInput/index.module.css
+++ b/apps/web/src/theme/components/PasswordInput/index.module.css
@@ -1,5 +1,5 @@
 .innerInput {
-  font-size: '16px !important';
+  font-size: rem(16px);
 
   &::placeholder {
     color: '#6d747b';
@@ -13,6 +13,6 @@
 }
 
 .label {
-  font-size: 18px;
+  font-size: rem(16px);
   font-weight: 600;
 }
