--- a/apps/web/src/theme/components/TextInput/index.module.css
+++ b/apps/web/src/theme/components/TextInput/index.module.css
@@ -1,5 +1,5 @@
 .input {
-  font-size: 16px;
+  font-size: rem(16px);
 
   &::placeholder,
   &:disabled,
@@ -18,6 +18,6 @@
 }
 
 .label {
-  font-size: 18px;
+  font-size: rem(16px);
   font-weight: 600;
 }
