--- a/apps/web/src/pages/_app/PageConfig/MainLayout/Header/components/UserMenu/index.module.css
+++ b/apps/web/src/pages/_app/PageConfig/MainLayout/Header/components/UserMenu/index.module.css
@@ -1,6 +1,20 @@
-.dropdown {
-  left: unset !important;
-  right: 30px !important;
-  border: 1px solid var(--mantine-color-gray-4);
-  box-shadow: unset !important;
+.cartButton {
+  position: relative;
+  display: flex;
+  align-items: end;
+  width: rem(40px);
+  height: rem(40px);
+}
+
+.count {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: rem(21px);
+  height: rem(21px);
+  color: var(--mantine-color-white);
+  border-radius: 50%;
 }
