--- a/apps/web/src/pages/_app/PageConfig/MainLayout/MainLayout.module.css
+++ b/apps/web/src/pages/_app/PageConfig/MainLayout/MainLayout.module.css
@@ -1,6 +1,6 @@
 .root {
   min-height: 100vh;
-  background-color: var(--mantine-color-gray-0);
+  background-color: var(--mantine-black-50);
 
   display: flex;
   flex-direction: column;
