feat: implement my products page

--- a/apps/web/src/pages/my-products/index.module.css
+++ b/apps/web/src/pages/my-products/index.module.css
@@ -1,6 +1,7 @@
-.newPrdocutCard {
+.card {
   justify-content: center;
   color: var(--mantine-blue-600);
+  border: rem(1px) solid var(--mantine-black-100);
 }
 
 .plus {
